# MY_CPP_UNITY_ANDROID_PLUGINS

C++PluginPractice/jni/: Android.mk  Application.mk  PluginPractice.cpp
MathPlugin/jni/: Android.mk  Application.mk  CMakeLists.txt  SimpleMath.cpp
TaskManager/jni/: Android.mk  Application.mk  TaskManagerPlugin.cpp
